Fixed in publish

--- a/4.UI/OG.Zoo.UI/ClientApp/src/index.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/index.html
@@ -9,6 +9,8 @@
   <!-- For material icons: -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <!-- Color bar on chrome mobile: -->
+  <meta name="theme-color" content="#001064" />
 </head>
 <body>
   <app-root></app-root>
